--- a/index.html
+++ b/index.html
@@ -2,64 +2,85 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>PPP Mini App</title>
+  <title>Eye</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
       margin: 0;
+      padding: 0;
+      background: #0f0f0f;
+      color: #ffffff;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    }
+
+    .container {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       padding: 20px;
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      text-align: center;
     }
 
     .card {
-      background: white;
-      padding: 24px;
-      border-radius: 12px;
-      max-width: 400px;
-      margin: 40px auto;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      width: 100%;
+      max-width: 420px;
+      background: #161616;
+      border-radius: 16px;
+      padding: 28px;
+      text-align: center;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
     }
 
-    h1 {
-      margin-top: 0;
+    .title {
+      font-size: 28px;
+      font-weight: 700;
+      margin-bottom: 10px;
     }
 
-    button {
-      margin-top: 20px;
-      padding: 14px 20px;
+    .subtitle {
       font-size: 16px;
+      opacity: 0.75;
+      line-height: 1.4;
+    }
+
+    .btn {
+      margin-top: 28px;
+      width: 100%;
+      padding: 16px;
+      font-size: 18px;
+      font-weight: 600;
       border: none;
-      border-radius: 8px;
-      background: #0088cc;
+      border-radius: 12px;
+      background: linear-gradient(135deg, #0088cc, #00aaff);
       color: white;
       cursor: pointer;
     }
 
-    button:active {
-      transform: scale(0.98);
+    .btn:active {
+      transform: scale(0.97);
     }
   </style>
 </head>
 <body>
 
-  <div class="card">
-    <h1>Добро пожаловать 👋</h1>
-    <p>
-      Ты попал в мой Telegram-мини-апп.<br>
-      Здесь будет эксклюзивный контент.
-    </p>
+  <div class="container">
+    <div class="card">
+      <div class="title">Eye</div>
+      <div class="subtitle">
+        Эксклюзивный контент.<br>
+        Доступ только через Telegram.
+      </div>
 
-    <button onclick="subscribe()">
-      Подписаться на канал
-    </button>
+      <button class="btn" onclick="subscribe()">
+        Подписаться на канал
+      </button>
+    </div>
   </div>
 
   <script>
     function subscribe() {
-      window.open("https://t.me/USERNAME_КАНАЛА", "_blank");
+      window.open("https://t.me/fafashnenewatafa", "_blank");
     }
   </script>
 
