--- a/index.html
+++ b/index.html
@@ -2,85 +2,147 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Eye</title>
+  <title>EYE Access</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: #0f0f0f;
-      color: #ffffff;
+      background: radial-gradient(circle at top, #1b1b1b, #000);
+      color: #fff;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
     }
 
-    .container {
+    .screen {
+      display: none;
       min-height: 100vh;
-      display: flex;
       align-items: center;
       justify-content: center;
       padding: 20px;
     }
 
+    .screen.active {
+      display: flex;
+    }
+
     .card {
       width: 100%;
       max-width: 420px;
-      background: #161616;
-      border-radius: 16px;
-      padding: 28px;
+      background: rgba(20,20,20,0.95);
+      border-radius: 20px;
+      padding: 32px 26px;
       text-align: center;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+      box-shadow: 0 20px 50px rgba(0,0,0,0.6);
+      border: 1px solid rgba(255,255,255,0.06);
+    }
+
+    .badge {
+      display: inline-block;
+      padding: 6px 14px;
+      font-size: 12px;
+      letter-spacing: 1px;
+      border-radius: 999px;
+      background: rgba(0,136,204,0.15);
+      color: #4db8ff;
+      margin-bottom: 18px;
     }
 
     .title {
-      font-size: 28px;
-      font-weight: 700;
-      margin-bottom: 10px;
+      font-size: 32px;
+      font-weight: 800;
+      letter-spacing: 2px;
+      margin-bottom: 12px;
     }
 
     .subtitle {
       font-size: 16px;
-      opacity: 0.75;
-      line-height: 1.4;
+      opacity: 0.8;
+      line-height: 1.5;
     }
 
     .btn {
-      margin-top: 28px;
+      margin-top: 30px;
       width: 100%;
-      padding: 16px;
+      padding: 18px;
       font-size: 18px;
-      font-weight: 600;
+      font-weight: 700;
       border: none;
-      border-radius: 12px;
-      background: linear-gradient(135deg, #0088cc, #00aaff);
+      border-radius: 14px;
+      background: linear-gradient(135deg, #0088cc, #00c6ff);
       color: white;
       cursor: pointer;
+      box-shadow: 0 10px 25px rgba(0,136,204,0.45);
+    }
+
+    .btn.secondary {
+      background: linear-gradient(135deg, #1db954, #1ed760);
+      box-shadow: 0 10px 25px rgba(29,185,84,0.4);
     }
 
     .btn:active {
       transform: scale(0.97);
     }
+
+    .hint {
+      margin-top: 14px;
+      font-size: 13px;
+      opacity: 0.5;
+    }
   </style>
 </head>
 <body>
 
-  <div class="container">
+  <!-- ЭКРАН 1: ПОДПИСКА -->
+  <div class="screen active" id="screen-subscribe">
     <div class="card">
-      <div class="title">Eye</div>
+      <div class="badge">PRIVATE ACCESS</div>
+      <div class="title">EYE ACCESS</div>
       <div class="subtitle">
-        Эксклюзивный контент.<br>
-        Доступ только через Telegram.
+        Закрытый контент.<br>
+        Доступ только для подписчиков.
       </div>
 
-      <button class="btn" onclick="subscribe()">
-        Подписаться на канал
+      <button class="btn" onclick="openChannel()">
+        🔓 Открыть доступ
       </button>
+
+      <div class="hint">
+        Подписка займёт 5 секунд
+      </div>
+    </div>
+  </div>
+
+  <!-- ЭКРАН 2: ПОДТВЕРЖДЕНИЕ -->
+  <div class="screen" id="screen-confirm">
+    <div class="card">
+      <div class="badge">ГОТОВО?</div>
+      <div class="title">Ты подписался?</div>
+      <div class="subtitle">
+        Если да — давай проверим<br>
+        твою точность ⚽
+      </div>
+
+      <button class="btn secondary" onclick="startGame()">
+        ⚽ Начать серию пенальти
+      </button>
+
+      <div class="hint">
+        Игра откроется прямо сейчас
+      </div>
     </div>
   </div>
 
   <script>
-    function subscribe() {
+    function openChannel() {
       window.open("https://t.me/fafashnenewatafa", "_blank");
+
+      // показываем экран подтверждения
+      document.getElementById("screen-subscribe").classList.remove("active");
+      document.getElementById("screen-confirm").classList.add("active");
+    }
+
+    function startGame() {
+      alert("Игра будет добавлена на следующем шаге ⚽");
     }
   </script>
 
