--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>EYE Access</title>
+  <title>EYE Penalty</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
       margin: 0;
-      background: radial-gradient(circle at top, #1b1b1b, #000);
-      color: #fff;
+      background: #0b6623;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      color: #fff;
     }
 
     .screen {
@@ -28,131 +28,112 @@
     .card {
       width: 100%;
       max-width: 420px;
-      background: rgba(20,20,20,0.95);
+      background: #0f7a2e;
       border-radius: 20px;
-      padding: 32px 26px;
-      text-align: center;
-      box-shadow: 0 20px 50px rgba(0,0,0,0.6);
-      border: 1px solid rgba(255,255,255,0.06);
-    }
-
-    .badge {
-      display: inline-block;
-      padding: 6px 14px;
-      font-size: 12px;
-      letter-spacing: 1px;
-      border-radius: 999px;
-      background: rgba(0,136,204,0.15);
-      color: #4db8ff;
-      margin-bottom: 18px;
+      padding: 20px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
     }
 
     .title {
-      font-size: 30px;
+      text-align: center;
       font-weight: 800;
-      letter-spacing: 2px;
-      margin-bottom: 10px;
-    }
-
-    .subtitle {
-      font-size: 16px;
-      opacity: 0.8;
-      line-height: 1.5;
+      font-size: 24px;
       margin-bottom: 10px;
     }
 
     .score {
-      font-size: 15px;
-      margin: 10px 0;
-      opacity: 0.85;
+      text-align: center;
+      font-size: 14px;
+      opacity: 0.9;
+      margin-bottom: 10px;
     }
 
-    .goal {
-      font-size: 40px;
-      margin: 20px 0;
-    }
-
-    .btn {
-      margin-top: 14px;
+    /* ПОЛЕ */
+    .field {
+      position: relative;
       width: 100%;
-      padding: 16px;
-      font-size: 18px;
-      font-weight: 700;
-      border: none;
+      height: 260px;
+      background: linear-gradient(#1e8f3a 50%, #178033 50%);
+      background-size: 100% 40px;
       border-radius: 14px;
-      background: linear-gradient(135deg, #0088cc, #00c6ff);
-      color: white;
+      overflow: hidden;
+      margin-bottom: 15px;
+    }
+
+    /* ВОРОТА */
+    .goal {
+      position: absolute;
+      top: 15px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 180px;
+      height: 70px;
+      border: 4px solid #fff;
+      border-bottom: none;
+      box-sizing: border-box;
+    }
+
+    /* МЯЧ */
+    .ball {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 26px;
+      height: 26px;
+      border-radius: 50%;
+      background: #fff;
+      border: 3px solid #000;
+    }
+
+    /* КНОПКИ */
+    .btn {
+      width: 100%;
+      margin-top: 8px;
+      padding: 14px;
+      font-size: 16px;
+      font-weight: 700;
+      border-radius: 12px;
+      border: none;
       cursor: pointer;
-      box-shadow: 0 10px 25px rgba(0,136,204,0.45);
+      background: linear-gradient(135deg, #0088cc, #00c6ff);
+      color: #fff;
     }
 
     .btn.secondary {
       background: linear-gradient(135deg, #1db954, #1ed760);
-      box-shadow: 0 10px 25px rgba(29,185,84,0.4);
     }
 
-    .btn:active {
-      transform: scale(0.97);
-    }
-
-    .hint {
-      margin-top: 12px;
+    .result {
+      text-align: center;
+      margin-top: 10px;
       font-size: 14px;
-      opacity: 0.7;
+      min-height: 20px;
     }
   </style>
 </head>
 <body>
 
-  <!-- ЭКРАН 1: ПОДПИСКА -->
-  <div class="screen active" id="screen-subscribe">
+  <!-- ЭКРАН ИГРЫ -->
+  <div class="screen active" id="screen-game">
     <div class="card">
-      <div class="badge">PRIVATE ACCESS</div>
-      <div class="title">EYE ACCESS</div>
-      <div class="subtitle">
-        Закрытый контент.<br>
-        Доступ только для подписчиков.
-      </div>
 
-      <button class="btn" onclick="openChannel()">🔓 Открыть доступ</button>
-      <button class="btn secondary" onclick="confirmSubscribed()">✅ Я подписался</button>
-
-      <div class="hint">Подписка занимает 5 секунд</div>
-    </div>
-  </div>
-
-  <!-- ЭКРАН 2: ПОДТВЕРЖДЕНИЕ -->
-  <div class="screen" id="screen-confirm">
-    <div class="card">
-      <div class="badge">ГОТОВО?</div>
-      <div class="title">Ты подписался?</div>
-      <div class="subtitle">
-        Тогда проверь свою<br>
-        точность ⚽
-      </div>
-
-      <button class="btn secondary" onclick="startGame()">⚽ Начать серию пенальти</button>
-    </div>
-  </div>
-
-  <!-- ЭКРАН 3: ИГРА -->
-  <div class="screen" id="screen-game">
-    <div class="card">
-      <div class="badge">PENALTY</div>
       <div class="title">Серия пенальти</div>
+      <div class="score" id="scoreText">Удар: 1 / 5 · Голы: 0</div>
 
-      <div class="score" id="scoreText">
-        Удар: 1 / 5 · Голы: 0
+      <div class="field">
+        <div class="goal"></div>
+        <div class="ball"></div>
       </div>
-
-      <div class="goal">🥅</div>
 
       <button class="btn" onclick="shoot('left')">⬅️ Влево</button>
       <button class="btn" onclick="shoot('center')">⬆️ Центр</button>
       <button class="btn" onclick="shoot('right')">➡️ Вправо</button>
 
-      <div id="result" class="hint"></div>
-      <button id="restartBtn" class="btn secondary" style="display:none;" onclick="restartGame()">🔁 Играть ещё</button>
+      <div class="result" id="result"></div>
+
+      <button class="btn secondary" id="restartBtn" style="display:none;" onclick="restart()">🔁 Играть ещё</button>
+
     </div>
   </div>
 
@@ -161,65 +142,41 @@
     let goals = 0;
     const maxShots = 5;
 
-    function openChannel() {
-      window.open("https://t.me/fafashnenewatafa", "_blank");
-    }
-
-    function confirmSubscribed() {
-      document.getElementById("screen-subscribe").classList.remove("active");
-      document.getElementById("screen-confirm").classList.add("active");
-    }
-
-    function startGame() {
-      shots = 0;
-      goals = 0;
-      updateScore();
-      document.getElementById("result").innerText = '';
-      document.getElementById("restartBtn").style.display = 'none';
-
-      document.getElementById("screen-confirm").classList.remove("active");
-      document.getElementById("screen-game").classList.add("active");
-    }
-
-    function shoot(direction) {
+    function shoot(dir) {
       if (shots >= maxShots) return;
 
       shots++;
+      const keeper = ['left','center','right'][Math.floor(Math.random()*3)];
 
-      const choices = ['left', 'center', 'right'];
-      const keeper = choices[Math.floor(Math.random() * 3)];
-
-      if (direction !== keeper) {
+      if (dir !== keeper) {
         goals++;
-        document.getElementById("result").innerText = '⚽ ГОООЛ!';
+        document.getElementById('result').innerText = '⚽ ГОЛ!';
       } else {
-        document.getElementById("result").innerText = '❌ СЕЙВ!';
+        document.getElementById('result').innerText = '❌ СЕЙВ!';
       }
 
       updateScore();
 
       if (shots === maxShots) {
-        endGame();
+        document.getElementById('result').innerText =
+          `🏁 Серия окончена: ${goals} из ${maxShots}`;
+        document.getElementById('restartBtn').style.display = 'block';
       }
     }
 
     function updateScore() {
-      document.getElementById("scoreText").innerText =
+      document.getElementById('scoreText').innerText =
         `Удар: ${shots + 1} / ${maxShots} · Голы: ${goals}`;
     }
 
-    function endGame() {
-      document.getElementById("result").innerText =
-        `🏁 Серия окончена! Ты забил ${goals} из ${maxShots}`;
-
-      document.getElementById("restartBtn").style.display = 'block';
-    }
-
-    function restartGame() {
-      startGame();
+    function restart() {
+      shots = 0;
+      goals = 0;
+      updateScore();
+      document.getElementById('result').innerText = '';
+      document.getElementById('restartBtn').style.display = 'none';
     }
   </script>
 
 </body>
 </html>
-
