--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>EYE Penalty</title>
+  <title>Penalty Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -14,15 +14,11 @@
     }
 
     .screen {
-      display: none;
       min-height: 100vh;
+      display: flex;
       align-items: center;
       justify-content: center;
       padding: 20px;
-    }
-
-    .screen.active {
-      display: flex;
     }
 
     .card {
@@ -38,7 +34,7 @@
       text-align: center;
       font-weight: 800;
       font-size: 24px;
-      margin-bottom: 10px;
+      margin-bottom: 6px;
     }
 
     .score {
@@ -48,7 +44,6 @@
       margin-bottom: 10px;
     }
 
-    /* ПОЛЕ */
     .field {
       position: relative;
       width: 100%;
@@ -60,7 +55,6 @@
       margin-bottom: 15px;
     }
 
-    /* ВОРОТА */
     .goal {
       position: absolute;
       top: 15px;
@@ -73,20 +67,31 @@
       box-sizing: border-box;
     }
 
-    /* МЯЧ */
+    .keeper {
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      width: 30px;
+      height: 30px;
+      background: #ffcc00;
+      border-radius: 50%;
+      transform: translateX(-50%);
+      transition: transform 0.4s ease;
+    }
+
     .ball {
       position: absolute;
       bottom: 20px;
       left: 50%;
-      transform: translateX(-50%);
-      width: 26px;
-      height: 26px;
-      border-radius: 50%;
+      width: 24px;
+      height: 24px;
       background: #fff;
       border: 3px solid #000;
+      border-radius: 50%;
+      transform: translateX(-50%);
+      transition: all 0.5s ease;
     }
 
-    /* КНОПКИ */
     .btn {
       width: 100%;
       margin-top: 8px;
@@ -100,83 +105,85 @@
       color: #fff;
     }
 
-    .btn.secondary {
-      background: linear-gradient(135deg, #1db954, #1ed760);
-    }
-
     .result {
       text-align: center;
-      margin-top: 10px;
-      font-size: 14px;
+      margin-top: 8px;
       min-height: 20px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
 
-  <!-- ЭКРАН ИГРЫ -->
-  <div class="screen active" id="screen-game">
-    <div class="card">
+<div class="screen">
+  <div class="card">
 
-      <div class="title">Серия пенальти</div>
-      <div class="score" id="scoreText">Удар: 1 / 5 · Голы: 0</div>
+    <div class="title">Пенальти</div>
+    <div class="score" id="scoreText">Удар: 1 / 5 · Голы: 0</div>
 
-      <div class="field">
-        <div class="goal"></div>
-        <div class="ball"></div>
-      </div>
-
-      <button class="btn" onclick="shoot('left')">⬅️ Влево</button>
-      <button class="btn" onclick="shoot('center')">⬆️ Центр</button>
-      <button class="btn" onclick="shoot('right')">➡️ Вправо</button>
-
-      <div class="result" id="result"></div>
-
-      <button class="btn secondary" id="restartBtn" style="display:none;" onclick="restart()">🔁 Играть ещё</button>
-
+    <div class="field">
+      <div class="goal"></div>
+      <div class="keeper" id="keeper"></div>
+      <div class="ball" id="ball"></div>
     </div>
+
+    <button class="btn" onclick="shoot('left')">⬅️ Влево</button>
+    <button class="btn" onclick="shoot('center')">⬆️ Центр</button>
+    <button class="btn" onclick="shoot('right')">➡️ Вправо</button>
+
+    <div class="result" id="result"></div>
+
   </div>
+</div>
 
-  <script>
-    let shots = 0;
-    let goals = 0;
-    const maxShots = 5;
+<script>
+  let shots = 0;
+  let goals = 0;
+  const maxShots = 5;
 
-    function shoot(dir) {
-      if (shots >= maxShots) return;
+  function shoot(direction) {
+    if (shots >= maxShots) return;
 
-      shots++;
-      const keeper = ['left','center','right'][Math.floor(Math.random()*3)];
+    shots++;
 
-      if (dir !== keeper) {
-        goals++;
-        document.getElementById('result').innerText = '⚽ ГОЛ!';
-      } else {
+    const keeperChoice = ['left','center','right'][Math.floor(Math.random()*3)];
+    const ball = document.getElementById('ball');
+    const keeper = document.getElementById('keeper');
+
+    // сброс позиций
+    ball.style.transition = 'none';
+    keeper.style.transition = 'none';
+    ball.style.transform = 'translateX(-50%)';
+    keeper.style.transform = 'translateX(-50%)';
+
+    setTimeout(() => {
+      ball.style.transition = 'all 0.5s ease';
+      keeper.style.transition = 'transform 0.4s ease';
+
+      if (direction === 'left') ball.style.transform = 'translateX(-120px) translateY(-140px)';
+      if (direction === 'center') ball.style.transform = 'translateX(-50%) translateY(-160px)';
+      if (direction === 'right') ball.style.transform = 'translateX(80px) translateY(-140px)';
+
+      if (keeperChoice === 'left') keeper.style.transform = 'translateX(-90px)';
+      if (keeperChoice === 'right') keeper.style.transform = 'translateX(60px)';
+    }, 50);
+
+    setTimeout(() => {
+      if (direction === keeperChoice) {
         document.getElementById('result').innerText = '❌ СЕЙВ!';
+      } else {
+        goals++;
+        document.getElementById('result').innerText = '⚽ ГОООЛ!';
       }
-
       updateScore();
+    }, 600);
+  }
 
-      if (shots === maxShots) {
-        document.getElementById('result').innerText =
-          `🏁 Серия окончена: ${goals} из ${maxShots}`;
-        document.getElementById('restartBtn').style.display = 'block';
-      }
-    }
-
-    function updateScore() {
-      document.getElementById('scoreText').innerText =
-        `Удар: ${shots + 1} / ${maxShots} · Голы: ${goals}`;
-    }
-
-    function restart() {
-      shots = 0;
-      goals = 0;
-      updateScore();
-      document.getElementById('result').innerText = '';
-      document.getElementById('restartBtn').style.display = 'none';
-    }
-  </script>
+  function updateScore() {
+    document.getElementById('scoreText').innerText =
+      `Удар: ${shots + 1} / ${maxShots} · Голы: ${goals}`;
+  }
+</script>
 
 </body>
 </html>
